<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_dosen"
            android:icon="@drawable/baseline_laptop_windows_24"
            android:title="@string/menu_komputer" />

        <item
            android:id="@+id/nav_mahasiswa"
            android:icon="@drawable/baseline_celebration_24"
            android:title="@string/menu_periferal" />

        <item
            android:id="@+id/nav_matakuliah"
            android:icon="@drawable/baseline_app_shortcut_24"
            android:title="@string/menu_smartphone" />

        <item
            android:id="@+id/nav_anggota"
            android:icon="@drawable/baseline_people_alt_24"
            android:title="@string/menu_anggota" />
    </group>
</menu>